# ex_process

./: .envrc  .gitignore  README.md  mix.exs
.github/workflows/: release.yml
lib/: ex_process.ex
lib/ex_process/: child.ex  command.ex  nif.ex  runtime.ex
lib/ex_process/command/: output.ex
native/command/: Cargo.toml  README.md
native/command/.cargo/: config.toml
native/command/src/: lib.rs  runtime.rs
test/ex_process/: command_test.exs
