[package]
name = "command"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "command"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.32.1", features = ["nif_version_2_17"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync"] }
async-process = "2.3.0"
process_alive = "0.1.1"